--- a/index.html
+++ b/index.html
@@ -5,43 +5,14 @@
 	<meta charset="utf-8" />
 	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css" />
 	<link rel="stylesheet" type="text/css" href="main.css">
-	<style type="text/css">
-
-		#selection {
-			padding: 50px;
-		}
-
-		.select_list {
-			display: inline-block;
-			vertical-align: top;
-		}
-
-		.select_tags {
-			padding-bottom: 10px;
-			padding-right: 40px;
-			padding-left: 40px;
-
-			font-size: 32px;
-		}
-
-		.select_list a {
-			text-decoration: none;
-			color: #8d67ac;
-		}
-
-		.select_list a:hover {
-			color: #59267c;
-		}
-
-	</style>
 </head>
 <body>
 	<nav class="navbar navbar-fixed-top" id="main_header">
 		<div class="container-fluid">
 			<div class="row">
 				<div class="navbar-brand col-md-2" id="viber_logo">
-					<a href="index.html">
-						<img src="img/viber_logo.png" />
+					<a href="http://www.viber.com/en/">
+						<img src="img/viber_logo.png" alt="Viber Logo" />
 					</a>
 				</div>
 				<h1 class="col-md-10 text-left">Transparency Report</h1>
@@ -55,7 +26,7 @@
 					<div class="select_list">
 						<li>
 							<a href="info_request.html">
-								<img src="img/pic.png" width="200px" />
+								<img src="img/info_request.png" alt="Information Request" width="250px" />
 								<div class="select_tags">
 									Information Request </p> on our Users
 								</div>
@@ -66,7 +37,7 @@
 						<div id="traf_block">
 							<li>
 								<a href="traf_block.html">
-									<img src="img/pic.png" width="200px" />
+									<img src="img/traffic_block.png" alt="Traffic Blocked" width="250px" />
 									<div class="select_tags">
 										Traffic Blocked
 									</div>
