--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<title>Transparency Report</title>
 	<meta charset="utf-8" />
 	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css" />
+	<link rel="stylesheet" href="font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
@@ -26,9 +27,11 @@
 					<div class="select_list">
 						<li>
 							<a href="info_request.html">
-								<img src="img/info_request.png" alt="Information Request" width="250px" />
+								<div class="select_icons">
+									<i class="fa fa-eye fa-5x" aria-hidden="true"></i>
+								</div>
 								<div class="select_tags">
-									Information Request </p> on our Users
+									Government Request for Information </p> on our Users
 								</div>
 							</a>
 						</li>
@@ -37,7 +40,9 @@
 						<div id="traf_block">
 							<li>
 								<a href="traf_block.html">
-									<img src="img/traffic_block.png" alt="Traffic Blocked" width="250px" />
+									<div class="select_icons">
+										<i class="fa fa-ban fa-5x" aria-hidden="true"></i>
+									</div>
 									<div class="select_tags">
 										Traffic Blocked
 									</div>
