--- a/info_request.html
+++ b/info_request.html
@@ -6,15 +6,13 @@
 	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css" />
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<link rel="stylesheet" type="text/css" href="table.css">
-
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
 	<nav class="navbar navbar-fixed-top" id="main_header">
 		<div class="container-fluid">
 			<div class="row">
 				<div class="navbar-brand col-md-2" id="viber_logo">
-					<a href="index.html">
+					<a href="http://www.viber.com/en/">
 						<img src="img/viber_logo.png" />
 					</a>
 				</div>
@@ -26,7 +24,7 @@
 		<nav class="navbar" id="top_wrapper">
 			<ul class="nav navbar-nav">
 				<li>
-					<header><h2>Traffic Blocked</h2></header>
+					<header><h2>Information Request</h2></header>
 				</li>
 				<li>
 					<a href="">
@@ -48,26 +46,21 @@
 						2014: July 1st - December 31st
 					</a>
 				</li>
-				<li>
-					<a href="">
-						2014: January 1st - June 31st
-					</a>
-				</li>
 			</ul>
 		</nav>
 	</div>
 	<div id="main_section">
 		<section>
+            <div id="table">
 				<table>
-				<div id="table">
-				<thead>
-					<tr>
-						<th>Country</th>
-						<th>Requests</th>
-						<th>Requests Complied</th>
-						<th>Percentage of the Data Produced</th>
-				</thead>
-					</tr>
+                    <thead>
+                        <tr>
+                            <th>Country</th>
+                            <th>Requests</th>
+                            <th>Requests Complied</th>
+                            <th>Percentage of the Data Produced</th>
+                        </tr>
+                    </thead>
 					<tbody>
 						<div id="tInfo">
 							<tr>
