--- a/traf_block.html
+++ b/traf_block.html
@@ -1,20 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Traffic Blocked</title>
+	<title>Requests from our users</title>
 	<meta charset="utf-8" />
 	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.css" />
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<link rel="stylesheet" type="text/css" href="table.css">
-
-	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 <body>
 	<nav class="navbar navbar-fixed-top" id="main_header">
 		<div class="container-fluid">
 			<div class="row">
 				<div class="navbar-brand col-md-2" id="viber_logo">
-					<a href="index.html">
+					<a href="http://www.viber.com/en/">
 						<img src="img/viber_logo.png" />
 					</a>
 				</div>
@@ -48,26 +46,21 @@
 						2014: July 1st - December 31st
 					</a>
 				</li>
-				<li>
-					<a href="">
-						2014: January 1st - June 31st
-					</a>
-				</li>
 			</ul>
 		</nav>
 	</div>
 	<div id="main_section">
 		<section>
+            <div id="table">
 				<table>
-				<div id="table">
-				<thead>
-					<tr>
-						<th>Country</th>
-						<th>Requests</th>
-						<th>Requests Complied</th>
-						<th>Percentage of Traffic Blocked</th>
-				</thead>
-					</tr>
+                    <thead>
+                        <tr>
+                            <th>Country</th>
+                            <th>Requests</th>
+                            <th>Requests Complied</th>
+                            <th>Percentage of the Data Produced</th>
+                        </tr>
+                    </thead>
 					<tbody>
 						<div id="tInfo">
 							<tr>
@@ -126,11 +119,10 @@
 							</tr>
 							<div id="total">
 								<tr>
-										<th>Total</th>
-										<th>500</th>
-										<th>400</th>
-										<th>24%</th>
-									</div>
+									<th>Total</th>
+									<th>500</th>
+									<th>400</th>
+									<th>24%</th>
 								</tr>
 							</div>
 						</tbody>
@@ -140,7 +132,7 @@
 		</section>
 		<div id="about">
 				<article>
-					<h1>What are these blocked traffic?</h1>
+					<h1>Why is Internet traffic being blocked?</h1>
 					</p>
 					<div id="about_text">
 						Emails that are encrypted as they’re routed from sender to receiver are like sealed envelopes, and less vulnerable to snooping—whether by bad actors or through government surveillance—than postcards. But some email is more secure than others. So to help you better understand whether your emails are protected by encryption, we’ve launched Safer Email, a new section in the Transparency Report.
